logging/fluentbit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skills-service
  namespace: skills
spec:
  selector:
    app: skills-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
